# Liquidity-Maker-with-Rust

./: Cargo.toml  README.md  binance_multiplestreams.txt  todo.txt  treeMap.txt
drafts/: README.txt  config2.json  configurable.rs
pythonWay/: README.txt  controlpanel.py  ikki.py  liquidityMaker.py  owlyStop10.py  requirements.txt
pythonWay/marketResearch/: .~lock.Central Bank Report 2022-08-16.xlsx#  Central Bank Report 2022-08-08.xlsx  Central Bank Report 2022-08-16.xlsx  Central Bank Report 2022-08-17.xlsx  Central Bank Report 2022-08-18.xlsx
sampleResponses/: live_order_book_currency_pairRESPONSE.txt
src/: binance.rs  binance_isolated.rs  binance_response.rs  bit_mod.rs  bitstamp.rs  bitstamp_isolated.rs  bitstamp_response.rs  config.json  config2.json  lib.rs  main.rs  mainBackup.rs  schema.rs  socket.rs  websocket.rs
