[package]
name = "keyrock"
version = "0.1.0"
edition = "2021"
#author = "Lorenzo Reyes"
#email = "lreyes@udesa.edu.ar"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"
default = true

[[bin]]
name = "binance"
path = "src/binance_isolated.rs"

[[bin]]
name = "bitstamp"
path = "src/bitstamp_isolated.rs"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
dateparser = "0.1.6"
derivative = "2.2.0"
protobuf = "3.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.1.0"
